--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AdapterTests</string>
     <string name="fragment_list_text">listando %d</string>
+    <string name="bt_add">Adicionar</string>
 
 </resources>
